# nice_duration

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_duration_string.py  test_nice_duration.py
src/: nice_duration.py
src/nice_duration/: __init__.py  nice_duration.py
tests/: test_examples.py  test_nice_duration.py
