[project]
name = "nice_duration"
version = "1.0.5"
authors = [
  { name="Tom Koelman" },
]
description = "Nice formatting of timedelta instances"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT-0"
license-files = [ "LICENSE" ]

[project.urls]
repository = "https://github.com/tomkoelman/nice_duration.git"
issues = "https://github.com/tomkoelman/nice_duration/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"
